# resnet

./: .gitignore  pyproject.toml
train/: trainer.py
