[tool.poetry]
name = "resnet"
version = "0.1.0"
description = ""
authors = ["pai-cm <cmkim@publicai.co.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
torch = "2.0.1"
torchvision = "0.15.2"
tqdm = "^4.66.4"
numpy = "1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
